fix/ fixed responsivity over the existing items, need to verify gaps but it's seems to be all working

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,42 @@ body {
   font-style: normal;
 }
 
+/* ========== TIPOGRAFIA ========== */
+.title {
+  font-size: var(--title-size);
+  font-weight: 700;
+}
+
+.subtitle {
+  font-size: var(--sub-size);
+  color: var(--text-secondary);
+}
+
+.text1,
+.text2 {
+  font-size: var(--text-size);
+  line-height: 1.9rem;
+}
+
+.text1 {
+  margin-bottom: 2rem;
+}
+
+.sub-img {
+  margin: 1rem;
+}
+
+.about-diferenciais {
+  list-style: none;
+  padding: 0;
+  text-align: left;
+  margin: 1.5rem 0;
+}
+
+.about-diferenciais li {
+  padding: 0.3rem 0;
+}
+
 /* ========== LAYOUT GERAL ========== */
 .container {
   max-width: var(--container-width);
@@ -156,7 +192,8 @@ ul li a:hover::after {
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: center;
-  /* width: 95%; */
+  max-width: fit-content;
+  width: 1400px;
   height: fit-content;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
@@ -167,8 +204,9 @@ ul li a:hover::after {
 }
 
 .hero-text {
+  position: absolute;
   width: 20rem;
-  margin: var(--margin-value);
+  /* margin: var(--margin-value); */
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   padding: var(--padding-value);
@@ -179,10 +217,12 @@ ul li a:hover::after {
 .hero-banner {
   width: var(--banner-width);
   max-width: 100%;
-  margin: var(--margin-value);
+  margin-right: -25rem;
+  /* margin: var(--margin-value); */
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
   overflow: hidden;
+  z-index: 1;
 }
 
 .hero-banner img {
@@ -193,26 +233,34 @@ ul li a:hover::after {
   display: block;
 }
 
+/* ========== SEÇÃO INFO ========== */
 .info-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(6, 1fr);
   gap: (--gap-value);
   border: #6f7274;
-  border: 1px solid var(--border-color);
+  /* border: 1px solid var(--border-color); */
   border-radius: var(--border-radius);
 }
+
 .grid-item1 {
+  padding: 0.5rem;
   margin: var(--margin-value);
   grid-column: span 2 / span 2;
   grid-row: span 4 / span 4;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
 }
 
 .grid-item2 {
   margin: var(--margin-value);
-
+  padding: 5rem 2rem 5rem 2rem;
   grid-column: span 2 / span 2;
   grid-row: span 2 / span 2;
   grid-column-start: 3;
@@ -222,7 +270,7 @@ ul li a:hover::after {
 
 .grid-item3 {
   margin: var(--margin-value);
-
+  padding: 5rem 2rem 5rem 2rem;
   grid-column: span 2 / span 2;
   grid-row: span 2 / span 2;
   grid-column-start: 3;
@@ -233,12 +281,20 @@ ul li a:hover::after {
 
 .grid-item4 {
   margin: var(--margin-value);
-
+  padding: 5rem 2rem 5rem 2rem;
   grid-column: span 4 / span 4;
   grid-row: span 2 / span 2;
   grid-row-start: 5;
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius);
+}
+
+#info-image {
+  border-radius: var(--border-radius);
+  margin: 0 1rem;
+  padding: 2rem;
+  width: 20rem;
+  height: auto;
 }
 
 /* ========== IMAGEM COM DESFOQUE NAS BORDAS ========== */
@@ -261,36 +317,53 @@ ul li a:hover::after {
   border-radius: var(--border-radius);
 }
 
-/* ========== TIPOGRAFIA ========== */
-.title {
-  font-size: var(--title-size);
-  font-weight: 700;
-}
-
-.subtitle {
-  font-size: var(--sub-size);
-  color: var(--text-secondary);
-}
-
-.text1,
-.text2 {
-  font-size: var(--text-size);
-  line-height: 1.9rem;
-}
-
-.text1 {
-  margin-bottom: 2rem;
-}
-
 /* ========== RESPONSIVIDADE ========== */
-@media (max-width: 768px) {
-  :root {
-    --container-width: 100%;
-    --banner-width: 100%;
-    --nav-height: auto;
-    --logo-size: 120px;
+@media (min-width: 1024px) {
+  .hero-banner-container {
+    display: flex;
+    flex-direction: column-reverse;
   }
-
+  .hero-banner {
+    max-width: 900px;
+    /* margin: 0 auto; */
+    position: relative;
+    margin: 9rem -29rem 0 -5rem;
+    max-width: 100%;
+    display: block;
+    z-index: 1;
+  }
+  .hero-text {
+    margin: 30rem 40rem 35rem 0;
+    z-index: 1;
+  }
+  .grid-item4 {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .about-diferenciais {
+    line-height: 0.5rem;
+  }
+  .about-diferenciais {
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 768px) {
+  .hero-banner-container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-text {
+    position: relative;
+  }
   .nav-container {
     flex-direction: column;
     align-items: center;
@@ -327,5 +400,20 @@ ul li a:hover::after {
   .image-fade {
     width: 100%;
     height: 200px;
+  }
+
+  .info-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
+  .grid-item1,
+  .grid-item2,
+  .grid-item3,
+  .grid-item4 {
+    grid-column: 1/ -1;
+    grid-row: auto;
+    margin: 0;
+    padding: 2rem;
   }
 }
